# ai-notestation

./: .env.example  .gitignore  260205-1.plan.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  NEXT_GENERATION_ROADMAP.md  README.en.md  README.md  ROADMAP.md  TASKS.md  docker-compose.yml  install.sh
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_oauth_tokens.py
backend/app/: __init__.py  config.py  constants.py  database.py  main.py  models.py
backend/app/ai_router/: __init__.py  image_utils.py  quality_gate.py  router.py  schemas.py  search_qa_evaluator.py  stream_monitor.py
backend/app/api/: __init__.py  activity_log.py  admin.py  ai.py  auth.py  backup.py  capture.py  comments.py  discovery.py  evaluation.py  export.py  feedback.py  files.py  graph.py  groups.py  handwriting.py  image_analysis.py  members.py  metrics.py  nas_images.py  notebooks.py  notes.py  notifications.py  nsx.py  oauth.py  search.py  settings.py  setup.py  share_links.py  shared.py  sharing.py  sync.py
backend/app/search/: __init__.py  embeddings.py  engine.py  indexer.py  judge.py  params.py  query_preprocessor.py  refinement.py  reranker.py
backend/app/services/: __init__.py  access_control.py  activity_log.py  auth_service.py  auto_tagger.py  capture_service.py  clustering.py  feedback_service.py  graph_service.py  group_service.py  hwp_extractor.py  image_analysis_service.py  notebook_access_control.py  notification_service.py  nsx_parser.py  oauth_service.py  ocr_service.py  pdf_extractor.py  (+8 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_access_control.py  test_activity_log.py  test_admin.py  test_ai_router.py  test_ai_schemas.py  test_anthropic_provider.py  test_api_ai.py  test_api_ai_oauth.py  test_api_discovery.py  test_api_groups.py  test_api_members.py  test_api_notebook_access.py  test_api_notebooks.py  test_api_notes.py  test_api_oauth.py  test_api_ocr.py  test_api_search.py  test_api_settings.py  test_api_share_links.py  test_api_shared.py  test_api_sharing.py  test_api_sync.py  test_auth_service.py  test_authz_integration.py  test_chatgpt_codex_provider.py  test_clustering.py  test_embeddings.py  test_filestation.py  test_fts.py  test_google_provider.py  test_hwp_extractor.py  test_hybrid_search.py  test_indexer.py  test_models_notebook.py  test_models_notebook_access.py  test_models_sharelink.py  test_note_utils.py  test_notebook_access_control.py  test_notestation.py  (+14 more)
(+371 files in other folders)
