[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labnote-ai"
version = "3.0.0"
description = "LabNote AI - Synology NoteStation enhanced with AI"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "LabNote AI Team" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "pydantic[email]>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
    "sse-starlette>=2.2.0",
    "pgvector>=0.3.6",
    "openai>=1.59.0",
    "tiktoken>=0.7.0",
    "anthropic>=0.42.0",
    "google-genai>=1.0.0",
    "zai-sdk>=0.2.2",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "cryptography>=44.0.0",
    "google-auth>=2.37.0",
    "scikit-learn>=1.6.0",
    "kiwipiepy>=0.18.0",
    "pymupdf>=1.25.0",
    "python-docx>=1.1.0",
    "readability-lxml>=0.8.1",
    "html2text>=2024.2.26",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "httpx>=0.28.0",
]

# Serve command (use via CLI):
#   uvicorn app.main:app --reload --host 0.0.0.0 --port 8000

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# --- Ruff ---
[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
    "SIM", # flake8-simplify
]
ignore = [
    "S101", # assert used (needed for tests)
    "S105", # hardcoded password (false positives in config)
    "S106", # hardcoded password (false positives in config)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

# --- Coverage ---
[tool.coverage.run]
source = ["app"]
omit = ["app/main.py"]

[tool.coverage.report]
fail_under = 70
show_missing = true
